@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare test
+DEPEND=app-admin/eselect-mpg123 || ( dev-libs/libltdl:0 <sys-devel/libtool-2.4.3-r2:2 ) alsa? ( media-libs/alsa-lib ) jack? ( media-sound/jack-audio-connection-kit ) nas? ( media-libs/nas ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) sdl? ( media-libs/libsdl ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-soundlibs-20130224-r9 !app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)] ) sys-devel/libtool virtual/pkgconfig
+DESCRIPTION=a realtime MPEG 1.0/2.0/2.5 audio player for layers 1, 2 and 3
+EAPI=5
+HOMEPAGE=http://www.mpg123.org/
+IUSE=cpu_flags_x86_3dnow cpu_flags_x86_3dnowext alsa altivec coreaudio int-quality ipv6 jack cpu_flags_x86_mmx nas oss portaudio pulseaudio sdl cpu_flags_x86_sse abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=GPL-2 LGPL-2.1
+RDEPEND=app-admin/eselect-mpg123 || ( dev-libs/libltdl:0 <sys-devel/libtool-2.4.3-r2:2 ) alsa? ( media-libs/alsa-lib ) jack? ( media-sound/jack-audio-connection-kit ) nas? ( media-libs/nas ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) sdl? ( media-libs/libsdl ) abi_x86_32? ( !<=app-emulation/emul-linux-x86-soundlibs-20130224-r9 !app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)] )
+SLOT=0
+SRC_URI=http://www.mpg123.org/download/mpg123-1.22.0.tar.bz2
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	0983c7893df461213a05f791cc7dea6d	multilib-minimal	13dd976916c35a1e2c8d170e840c7018	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=30182494d52ade413f8de101c6b7437d
